Finished first draft of interim report

--- a/mprop/mprop.bib
+++ b/mprop/mprop.bib
@@ -1,14 +1,120 @@
-@Book{BK08,
-author={C. Baier and J.-P. Katoen},
-title={Principles of Model Checking},
-publisher={MIT Press},
-year={2008},
 
-volume={},
-series={},
-address={},
-edition={},
-month={},
-note={},
-key={}
+@article{girao_partitioning_2019,
+	title = {Partitioning a graph into monochromatic connected subgraphs},
+	volume = {91},
+	issn = {0364-9024, 1097-0118},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/jgt.22435},
+	doi = {10.1002/jgt.22435},
+	language = {en},
+	number = {4},
+	urldate = {2021-10-20},
+	journal = {Journal of Graph Theory},
+	author = {Girão, António and Letzter, Shoham and Sahasrabudhe, Julian},
+	month = aug,
+	year = {2019},
+	pages = {353--364},
+	file = {Girão et al. - 2019 - Partitioning a graph into monochromatic connected .pdf:C\:\\Users\\Lewis\\Zotero\\storage\\KN8CFR8L\\Girão et al. - 2019 - Partitioning a graph into monochromatic connected .pdf:application/pdf},
+}
+
+@article{luczak_highly_2016,
+	title = {Highly connected monochromatic subgraphs of two-colored complete graphs},
+	volume = {117},
+	issn = {0095-8956},
+	url = {https://www.sciencedirect.com/science/article/pii/S0095895615001355},
+	doi = {10.1016/j.jctb.2015.11.006},
+	abstract = {We show that each 2-edge coloring of the complete graph on n vertices leads to a monochromatic k-connected subgraph on at least n−2(k−1) vertices, provided n≥4k−3. It settles in the affirmative a conjecture of Bollobás and Gyárfás.},
+	language = {en},
+	urldate = {2021-10-20},
+	journal = {Journal of Combinatorial Theory, Series B},
+	author = {Łuczak, Tomasz},
+	month = mar,
+	year = {2016},
+	keywords = {Colorings, Connectivity, Monochromatic subgraph},
+	pages = {88--92},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\Lewis\\Zotero\\storage\\EAWGFNSI\\Łuczak - 2016 - Highly connected monochromatic subgraphs of two-co.pdf:application/pdf},
+}
+
+@article{matousek_large_2007,
+	series = {European {Conference} on {Combinatorics}, {Graph} {Theory} and {Applications}},
+	title = {Large {Monochromatic} {Components} in {Two}-colored {Grids}},
+	volume = {29},
+	issn = {1571-0653},
+	url = {https://www.sciencedirect.com/science/article/pii/S1571065307000819},
+	doi = {10.1016/j.endm.2007.07.002},
+	abstract = {Let Dnd denote the d-dimensional grid with diagonals, that is, the graph with vertex set \{1,2,…,n\}d and with edges connecting every two vertices that differ by at most 1 in every coordinate. We prove that for an arbitrary 2-coloring of the vertices of Dnd there exists a monochromatic connected subgraph with at least nd−1−d2nd−2 vertices. We also consider a d-dimensional triangulated grid; this is the graph of a triangulation of the solid cube [1,n]d that refines the subdivision of [1,n]d into the grid of unit cubes. Here every 2-coloring has a monochromatic connected subgraph with Ω(nd−1/d) vertices.},
+	language = {en},
+	urldate = {2021-10-20},
+	journal = {Electronic Notes in Discrete Mathematics},
+	author = {Matoušek, Jiří and Přívětivý, Aleš},
+	month = aug,
+	year = {2007},
+	keywords = {graph coloring, HEX lemma, separator},
+	pages = {3--9},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\Lewis\\Zotero\\storage\\3T2WTN82\\Matoušek and Přívětivý - 2007 - Large Monochromatic Components in Two-colored Grid.pdf:application/pdf},
+}
+
+@article{richey_counting_nodate,
+	title = {Counting {Clusters} on a {Grid}},
+	language = {en},
+	author = {Richey, Jacob and Winkler, Peter},
+	pages = {25},
+	file = {Richey and Winkler - Counting Clusters on a Grid.pdf:C\:\\Users\\Lewis\\Zotero\\storage\\62B6G66L\\Richey and Winkler - Counting Clusters on a Grid.pdf:application/pdf},
+}
+
+@article{ben-moshe_centdian_2012,
+	title = {Centdian {Computation} in {Cactus} {Graphs}},
+	volume = {16},
+	doi = {10.7155/jgaa.00255},
+	abstract = {This paper focuses on the centdian problem in a cactus network where a cactus network is a connected undirected graph, and any two simple cycles in the graph have at most one node in common. The cactus network has important applications for wireless sensor networks when a tree topology might not be applicable and for extensions to the ring architecture. The centdian criterion represents a convex combination of two QoS requirements: transport and delay. To the best of our knowledge, no efficient algorithm has yet been developed for constructing a centdian node in a cactus graph, either sequential or distributed. We first investigate the properties of the centdian node in a cycle graph, and then explore the behavior of the centdian node in a cactus graph. Finally, we present new efficient sequential and distributed algorithms for finding all centdian nodes in a cycle graph and a cactus graph.},
+	journal = {J. Graph Algorithms Appl.},
+	author = {Ben-Moshe, Boaz and Dvir, Amit and Segal, Michael and Tamir, Arie},
+	month = jan,
+	year = {2012},
+	pages = {199--224},
+	file = {Full Text PDF:C\:\\Users\\Lewis\\Zotero\\storage\\A39FBCVZ\\Ben-Moshe et al. - 2012 - Centdian Computation in Cactus Graphs.pdf:application/pdf},
+}
+
+@article{bonato_survey_2020,
+	title = {A survey of graph burning},
+	url = {http://arxiv.org/abs/2009.10642},
+	abstract = {Graph burning is a deterministic, discrete-time process that models how influence or contagion spreads in a graph. Associated to each graph is its burning number, which is a parameter that quantifies how quickly the influence spreads. We survey results on graph burning, focusing on bounds, conjectures, and algorithms related to the burning number. We will discuss state-of-the-art results on the burning number conjecture, burning numbers of graph classes, and algorithmic complexity. We include a list of conjectures, variants, and open problems on graph burning.},
+	urldate = {2021-12-07},
+	journal = {arXiv:2009.10642 [math]},
+	author = {Bonato, Anthony},
+	month = sep,
+	year = {2020},
+	note = {arXiv: 2009.10642
+version: 1},
+	keywords = {Mathematics - Combinatorics},
+	file = {arXiv Fulltext PDF:C\:\\Users\\Lewis\\Zotero\\storage\\HSUWF9YR\\Bonato - 2020 - A survey of graph burning.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\Lewis\\Zotero\\storage\\Y3XPW7LB\\2009.html:text/html},
+}
+
+@inproceedings{bonato_burning_2014,
+	address = {Cham},
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {Burning a {Graph} as a {Model} of {Social} {Contagion}},
+	isbn = {978-3-319-13123-8},
+	doi = {10.1007/978-3-319-13123-8_2},
+	abstract = {We introduce a new graph parameter called the burning number, inspired by contact processes on graphs such as graph bootstrap percolation, and graph searching paradigms such as Firefighter. The burning number measures the speed of the spread of contagion in a graph; the lower the burning number, the faster the contagion spreads. We provide a number of properties of the burning number, including characterizations and bounds. The burning number is computed for several graph classes, and is derived for the graphs generated by the Iterated Local Transitivity model for social networks.},
+	language = {en},
+	booktitle = {Algorithms and {Models} for the {Web} {Graph}},
+	publisher = {Springer International Publishing},
+	author = {Bonato, Anthony and Janssen, Jeannette and Roshanbin, Elham},
+	editor = {Bonato, Anthony and Graham, Fan Chung and Prałat, Paweł},
+	year = {2014},
+	keywords = {Cartesian Grid, Connected Graph, Domination Number, Online Social Network, Social Contagion},
+	pages = {13--22},
+	file = {Springer Full Text PDF:C\:\\Users\\Lewis\\Zotero\\storage\\SKTEEP5D\\Bonato et al. - 2014 - Burning a Graph as a Model of Social Contagion.pdf:application/pdf},
+}
+
+@article{wood_defective_2018,
+	title = {Defective and {Clustered} {Graph} {Colouring}},
+	volume = {1},
+	doi = {10.37236/7406},
+	abstract = {Consider the following two ways to colour the vertices of a graph where the requirement that adjacent vertices get distinct colours is relaxed. A colouring has "defect" \$d\$ if each monochromatic component has maximum degree at most \$d\$. A colouring has "clustering" \$c\$ if each monochromatic component has at most \$c\$ vertices. This paper surveys research on these types of colourings, where the first priority is to minimise the number of colours, with small defect or small clustering as a secondary goal. List colouring variants are also considered. The following graph classes are studied: outerplanar graphs, planar graphs, graphs embeddable in surfaces, graphs with given maximum degree, graphs with given maximum average degree, graphs excluding a given subgraph, graphs with linear crossing number, linklessly or knotlessly embeddable graphs, graphs with given Colin de Verdi{\textbackslash}`ere parameter, graphs with given circumference, graphs excluding a fixed graph as an immersion, graphs with given thickness, graphs with given stack- or queue-number, graphs excluding \$K\_t\$ as a minor, graphs excluding \$K\_\{s,t\}\$ as a minor, and graphs excluding an arbitrary graph \$H\$ as a minor. Several open problems are discussed.},
+	journal = {Electronic Journal of Combinatorics},
+	author = {Wood, David},
+	month = mar,
+	year = {2018},
+	file = {Full Text:C\:\\Users\\Lewis\\Zotero\\storage\\NJ77ATTC\\Wood - 2018 - Defective and Clustered Graph Colouring.pdf:application/pdf},
 }
