--- a/mprop/mprop.tex
+++ b/mprop/mprop.tex
@@ -18,7 +18,7 @@
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Counting Monochromatic Components in Adversarial Graph Burning}
+\title{Counting Monochromatic Components in 2-player Graph Burning}
 \author{Lewis Dyer}
 \date{17th December, 2021}
 \maketitle
@@ -32,26 +32,31 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}\label{intro}
 
-In 2014, Bonato et al. introduced graph burning in \cite{bonato_burning_2014}, a discrete-time graph process intended as a simple model for contagion in graphs, such as the spread of influence on a social network. We propose an extension to graph burning, known as \emph{adversarial} graph burning, designed to model contagions which are designed to interact and block one other. For example, consider two competing influences on a social network, such as businesses advertising competing products during an election. Once someone is influenced by one particular idea, influencing them with other ideas becomes more challenging, and adversarial graph burning aims to model this conflict by not allowing infected vertices to change their type of infection in a later round. This more complex interaction leads to a number of research questions, where some are closely connected to regular graph burning while others are entirely new.
+
+%2-colour graph burning
+In 2014, Bonato et al.\ introduced graph burning in \cite{bonato_burning_2014}, a discrete-time graph process intended as a simple model for contagion in graphs, such as the spread of influence on a social network. We propose an extension to graph burning, known as \emph{2-player} graph 
+burning, designed to model contagions which are designed to interact and block one other. For example, consider two competing influences on a social network, such as businesses advertising competing products during an election. Once someone is influenced by one particular idea, influencing them with other ideas becomes more challenging, and 2-player graph burning aims to model this conflict by not allowing infected vertices to change their type of infection in a later round. This more complex interaction leads to a number of research questions, where some are closely connected to regular graph burning while others are entirely new.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Statement of Problem}
 
-In particular, while modelling competing contagion, it can often be helpful to model "pockets" of infection. For example, when considering the spread of political beliefs on a social network, these pockets can represent "echo" chambers - communities of people who interact with each other on a regular basis, reinforcing and amplifying their beliefs. On a graph, these pockets are represented by connected monochromatic components.
+In particular, while modelling competing contagion, it can often be helpful to consider "pockets" of infection. For example, when considering the spread of political beliefs on a social network, these pockets can represent `echo chambers' - communities of people who interact with each other on a regular basis, reinforcing and amplifying their beliefs - which either form over time as people interact with those they agree with, or can be formed by malicious actors to cause disorder in a political landscape. On a graph, these pockets are represented by connected monochromatic components.
 
-Our main aim is to investigate the maximum number of monochromatic components that are attainable on a given connected graph through adversarial graph burning. Throughout this project, we aim to consider this question on graph classes of increasing generality, with our final aim ideally being to answer this question for any connected graph.
+Our main aim is to investigate the maximum number of monochromatic components that are attainable on a given connected graph through 2-player graph burning. Throughout this project, we aim to consider this question on graph classes of increasing generality, with our final aim ideally being to answer this question for any connected graph.
 
 The results of this research may take a number of different forms, including exact results for counting the maximum number of monochromatic components for various graphs with both constructive algorithms and non-constructive results, approximate results for counting monochromatic components, finding upper and lower bounds for the problem on general graphs, and developing useful heuristics for approximating the number of monochromatic components on graphs.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Literature Survey}
 
-Since its introduction in 2014, a variety of work surrounding graph burning has been completed, as summarised by Bonato in \cite{bonato_survey_2020}. In particular, a key focus on previous research on graph burning concerns the \emph{burning number} of a graph - the minimum number of rounds required to burn every vertex of a graph. This property has been studied for many classes of graph, and the key open problem in graph burning is that, for any connected graph with $n$ vertices, the burning number of said graph is at most $\lceil n^\frac{1}{2} \rceil$. Interestingly, when trying to maximise the number of clusters in an instance of adversarial graph burning, we are frequently interested in trying to \emph{maximise} the number of rounds taken to burn the entire graph, rather than minimise.
+Since its introduction in 2014, a variety of work surrounding graph burning has been completed, as summarised by Bonato in \cite{bonato_survey_2020}. In particular, a key focus on previous research on graph burning concerns the \emph{burning number} of a graph - the minimum number of rounds required to burn every vertex of a graph. This property has been studied for many classes of graph, and the key open problem in graph burning is that, for any connected graph with $n$ vertices, the burning number of said graph is at most $\lceil n^\frac{1}{2} \rceil$. Interestingly, when trying to maximise the number of clusters in an instance of 2-player graph burning, we are frequently interested in trying to \emph{maximise} the number of rounds taken to burn the entire graph, rather than minimise.
 
-Some previous work exists on monochromatic components in graph colourings, in more limited contexts. In \cite{richey_counting_nodate}, Richey considered two-colourings of an $m \times n$ grid where each square is coloured black or white with probability $\frac{1}{2}$. Richey showed that the limit $\lambda = \lim_{m, n \rightarrow \infty} \frac{e(m, n)}{mn}$, the ratio of the expected number of clusters in an $m \times n$ grid to the size of said grid, exists with $\frac{29}{448} \leq \lambda \leq \frac{1}{12}$, along with computing explicit values for $e(m,n)$ with $n$ at most 3. Richey primarily uses ergodic theory to show this limit exists, then considers the change in cluster count by successively appending columns to a grid in order to obtain bounds for this limit. However Richey considers all possible two-colourings on graphs, whereas we only consider colourings attainable via adversarial graph burning. This places additional constraints on the problem which make the solution more complex - for instance, while appending a coloured column to a grid will always give another 2-colouring of the grid, concatenating two valid colourings under adversarial graph burning may not always lead to another valid colouring. Moreover, Richey's techniques focus on counting the expected number of clusters rather than the maximum number of clusters, and Richey primarily focuses on grids and other lattice-style graphs.
 
-Some other results on monochromatic components in graph colourings exists, but focus on the existence of certain subgraphs within large enough graphs. For instance, in \cite{girao_partitioning_2019}, Gir\~ao et al. show that for sufficiently large graphs on $n$ vertices with minimum degree at least $\frac{2n-5}{3}$, any 2-edge-colouring on these graphs can be partitioned into two connected monochromatic subgraphs. Similarly, Matou\v sek and P\v r\'iv\v etiv\'y show in \cite{matousek_large_2007} that, on the d-dimensional grid with diagonals, with vertex set $\{1,2,\dots,n\}^d$, for an arbitrary 2-colouring of the vertices, there exists a monochromatic connected subgraph of size at least $n^{d-1}-d^2n^{d-2}$. However, the applicability of these results are quite limited, since adding or modifying even small numbers of edges or vertices can drastically change the overall behaviour of a graph in adversarial graph burning. 
+% define e(m,n) before lambda
+Some previous work exists on monochromatic components in graph colourings, in more limited contexts. In \cite{richey_counting_nodate}, Richey considered two-colourings of an $m \times n$ grid where each square is coloured black or white with probability $\frac{1}{2}$, and aimed to compute $e(m,n)$, the expected number of clusters over all colourings of an $m \times n$ grid. Richey showed that the limit $\lambda = \lim_{m, n \rightarrow \infty} \frac{e(m, n)}{mn}$, the ratio of the expected number of clusters in an $m \times n$ grid to the size of said grid, exists with $\frac{29}{448} \leq \lambda \leq \frac{1}{12}$, along with computing explicit values for $e(m,n)$ with $n$ at most 3. Richey primarily uses ergodic theory to show this limit exists, then considers the change in cluster count by successively appending columns to a grid in order to obtain bounds for this limit. However Richey considers all possible two-colourings on graphs, whereas we only consider colourings attainable via two-player graph burning. This places additional constraints on the problem which make the solution more complex - for instance, while appending a coloured column to a grid will always give another 2-colouring of the grid, concatenating two valid colourings under 2-player graph burning may not always lead to another valid colouring. Moreover, Richey's techniques focus on counting the expected number of clusters rather than the maximum number of clusters, and Richey primarily focuses on grids and other lattice-style graphs.
 
-In \cite{wood_defective_2018}, Wood discusses the \emph{clustering} of a graph, saying that a graph is $k$-colourable with clustering $c$ if there exists a k-colouring of the graph with each monochromatic component containing at most $c$ vertices. Finding the minimal value $c$ such that a graph is $2$-colourable with clustering $c$ may be useful in finding upper bounds for the number of clusters, though in practice this bound will be quite weak, since many 2-colourings of a graph cannot arise from adversarial graph burning, and it may be the case that allowing some clusters to be larger than $c$ vertices will lead to colourings with more clusters overall. For example, paths are $2$-colourable with clustering $1$, alternating the colour of each vertex, suggesting an upper bound of $\lceil \frac{n}{2} \rceil$ red clusters, but the maximum number of red clusters on a path is $\lceil \frac{n}{3} \rceil$.
+Some other results on monochromatic components in graph colourings exists, but focus on the existence of certain subgraphs within large enough graphs. For instance, in \cite{girao_partitioning_2019}, Gir\~ao et al. show that for sufficiently large graphs on $n$ vertices with minimum degree at least $\frac{2n-5}{3}$, any 2-edge-colouring on these graphs can be partitioned into two connected monochromatic subgraphs. Similarly, Matou\v sek and P\v r\'iv\v etiv\'y show in \cite{matousek_large_2007} that, on the d-dimensional grid with diagonals, with vertex set $\{1,2,\dots,n\}^d$, for an arbitrary 2-colouring of the vertices, there exists a monochromatic connected subgraph of size at least $n^{d-1}-d^2n^{d-2}$. However, the applicability of these results are quite limited, since adding or modifying even small numbers of edges or vertices can drastically change the overall behaviour of a graph in 2-player graph burning. 
+
+In \cite{wood_defective_2018}, Wood discusses the \emph{clustering} of a graph, saying that a graph is $k$-colourable with clustering $c$ if there exists a k-colouring of the graph with each monochromatic component containing at most $c$ vertices. Finding the minimal value $c$ such that a graph is $2$-colourable with clustering $c$ may be useful in finding upper bounds for the number of clusters, though in practice this bound will be quite weak, since many 2-colourings of a graph cannot arise from 2-player graph burning, and it may be the case that allowing some clusters to be larger than $c$ vertices will lead to colourings with more clusters overall. Moreover, knowing a graph has clustering $c$ says little about the overall distribution of cluster sizes, just an upper bound on the size of the largest cluster.  For example, paths are $2$-colourable with clustering $1$, alternating the colour of each vertex, suggesting an upper bound of $\lceil \frac{n}{2} \rceil$ red clusters, but in this project we have already show that the maximum number of red clusters on a path is $\lceil \frac{n}{3} \rceil$.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -60,11 +65,11 @@ In \cite{wood_defective_2018}, Wood discusses the \emph{clustering} of a graph, 
 So far, I have:
 
 \begin{itemize}
-    \item Formally defined adversarial graph burning, and implemented a simulator to perform adversarial graph burning on general graphs with pre-defined agents using various heuristics, such as choosing the remaining vertex with maximum degree or maximum betweenness centrality.
-    \item Proved a upper bound for the number of clusters in connected graphs, showing this upper bound is attainable on paths.
+    \item Formally defined 2-player graph burning, and implemented a simulator to perform 2-player graph burning on general graphs with pre-defined agents using various heuristics, such as choosing the remaining vertex with maximum degree or maximum betweenness centrality.
+    \item Proved an upper bound on the number of clusters in connected graphs, showing this upper bound is attainable on paths.
     \item Developed an exact algorithm for colouring caterpillar graphs, proving its correctness.
-    \item Implemented this algorithm non-constructively for "reduced caterpillar graphs".
-    \item Started to develop a algorithm for colouring trees by finding maximal caterpillar graphs in the tree, which will be an approximate algorithm.
+    \item Implemented this algorithm non-constructively for `reduced caterpillar graphs'.
+    \item Started to develop an algorithm for colouring trees by finding maximal caterpillar graphs in the tree, which will be an approximate algorithm.
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -72,11 +77,12 @@ So far, I have:
 
 My main plan for Semester 2 is as follows, though this is subject to change:
 
+% ideally 12th, maybe the 5th
 \begin{itemize}
     \item Finish developing an algorithm for colouring trees, and understand the bounds for the maximum number of clusters that this algorithm provides. Aim to do this by \textbf{February}.
     \item Modify this algorithm for colouring cactus graphs (connected graphs that can contain cycles, but any pair of cycles can have at most one vertex in common). Aim to do this by \textbf{March}.
     \item Aim to modify this resulting algorithm in order to colour general connected graphs. Aim to do this before \textbf{the last week of March}.
-    \item Spend the remainder of the time polishing up the final paper and preparing the presentation. The deadline for this is the \textbf{15th of April} (with the presentation TBC, but sometime before this - potentially that Tuesday, i.e the 12th of April?).
+    \item Spend the remainder of the time polishing up the final paper and preparing the presentation. The deadline for this is the \textbf{15th of April} (the presentation date is TBC, but it will most likely be the FATA seminar on the 12th of April).
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
